# trendsmcp-py

./: LICENSE  README.md  pyproject.toml
src/trendsmcp/: __init__.py  client.py  exceptions.py  types.py
